--- a/doc/classes/R.Component.html
+++ b/doc/classes/R.Component.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>R.Component - react-rails</title>
+    <title>R.Component</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.9.1/build/cssgrids/cssgrids-min.css">
     <link rel="stylesheet" href="../assets/vendor/prettify/prettify-min.css">
     <link rel="stylesheet" href="../assets/css/main.css" id="site_styles">
@@ -15,11 +15,11 @@
     <div id="hd" class="yui3-g header">
         <div class="yui3-u-3-4">
             
-                <h1><img src="../assets/css/logo.png" title="react-rails"></h1>
+                <h1><img src="../assets/css/logo.png" title=""></h1>
             
         </div>
         <div class="yui3-u-1-4 version">
-            <em>API Docs for: 0.2.2</em>
+            <em>API Docs for: </em>
         </div>
     </div>
     <div id="bd" class="yui3-g">
@@ -124,7 +124,7 @@
 
     
         <div class="foundat">
-            Defined in: <a href="../files/src_R.Component.js.html#l6"><code>src\R.Component.js:6</code></a>
+            Defined in: <a href="../files/f:_Users_Elie_git_react_react-rails_src_R.Component.js.html#l6"><code>f:\Users\Elie\git\react\react-rails\src\R.Component.js:6</code></a>
         </div>
     
 
@@ -250,7 +250,7 @@
             
         
         
-        <a href="../files/src_R.Component.js.html#l33"><code>src\R.Component.js:33</code></a>
+        <a href="../files/f:_Users_Elie_git_react_react-rails_src_R.Component.js.html#l33"><code>f:\Users\Elie\git\react\react-rails\src\R.Component.js:33</code></a>
         
         </p>
 
@@ -317,7 +317,7 @@
             
         
         
-        <a href="../files/src_R.Component.js.html#l22"><code>src\R.Component.js:22</code></a>
+        <a href="../files/f:_Users_Elie_git_react_react-rails_src_R.Component.js.html#l22"><code>f:\Users\Elie\git\react\react-rails\src\R.Component.js:22</code></a>
         
         </p>
 
@@ -362,7 +362,7 @@ Allows all components using this mixin to have reference to R.Flux (Provides by 
             
         
         
-        <a href="../files/src_R.Component.js.html#l16"><code>src\R.Component.js:16</code></a>
+        <a href="../files/f:_Users_Elie_git_react_react-rails_src_R.Component.js.html#l16"><code>f:\Users\Elie\git\react\react-rails\src\R.Component.js:16</code></a>
         
         </p>
 
